# pedagogical_adaptivity_in_LLM_tutors

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/stage1/: factorial_sample.csv  factorial_sample.jsonl  manifest.json
data/stage2/: case_narratives.json  case_narratives.jsonl  cases_cleaned.jsonl  cases_final.json  cases_final.jsonl  cases_regenerated.jsonl  cases_to_regenerate.csv  checkpoint.json  manifest.json  regen_checkpoint.json
data/stage4/: gemini_responses.json  gemini_responses.jsonl  manifest.json
data/stage5/: causal_interference_matrix.json  corrective_training_data.json  eval_heldout_cases.json  interference_analysis.json  manifest.json  manifest_causal_interference.json  manifest_corrective.json  manifest_corrective_per_dp.json  manifest_corrective_stratified.json  manifest_finetune.json  manifest_heldout.json  manifest_per_dp_finetune.json  manifest_query.json  manifest_weak_cells.json  post_intervention_r1.json  post_intervention_r16.json  post_intervention_r4.json  post_intervention_r8.json  scored_dataset.jsonl  weak_cells.json
data/stage6/: manifest_phase2_cases.json  phase2_cases.json
src/common/: io_utils.py  schemas.py  text_utils.py
src/pipeline/: __main__.py  cli.py  config.py  logging_utils.py  manifests.py
src/stage1_factorial/: exporter.py  generator.py  pipeline.py
src/stage2_generation/: audit.py  checkpoint.py  dedup.py  diversity.py  pipeline.py  prompt_builder.py  provider_xai.py  (+2 more)
tests/: test_io.py  test_stage1_generator.py  test_stage2_prompt_builder.py  test_stage2_validator.py  test_stage5_scoring.py
(+30 files in other folders)
