[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pedagogical-adaptivity-pipeline"
version = "0.1.0"
description = "Research pipeline for pedagogical adaptivity in LLM tutors"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
